# OrgX_Hackathon

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  convert_images.py  logistic_regression_model.json  push_to_github.bat
Collab/: OrgX (1).ipynb
analytics_engine/: CMakeLists.txt  backend_python.py  csv_streamer.py  test_api.py  test_conn.py
analytics_engine/include/: Inference.h  KVStore.h  ThreadPool.h  WAL.h
analytics_engine/src/: Inference.cpp  KVStore.cpp  ThreadPool.cpp  WAL.cpp  main.cpp
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx  index.css
